; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_dev.c_free_pfhwdev.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_dev.c_free_pfhwdev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hinic_pfhwdev = type { i32, %struct.hinic_hwdev }
%struct.hinic_hwdev = type { i32 }

@HINIC_PF_MGMT_INIT = common dso_local global i32 0, align 4
@HINIC_MOD_L2NIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hinic_pfhwdev*)* @free_pfhwdev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_pfhwdev(%struct.hinic_pfhwdev* %0) #0 {
  %2 = alloca %struct.hinic_pfhwdev*, align 8
  %3 = alloca %struct.hinic_hwdev*, align 8
  store %struct.hinic_pfhwdev* %0, %struct.hinic_pfhwdev** %2, align 8
  %4 = load %struct.hinic_pfhwdev*, %struct.hinic_pfhwdev** %2, align 8
  %5 = getelementptr inbounds %struct.hinic_pfhwdev, %struct.hinic_pfhwdev* %4, i32 0, i32 1
  store %struct.hinic_hwdev* %5, %struct.hinic_hwdev** %3, align 8
  %6 = load %struct.hinic_hwdev*, %struct.hinic_hwdev** %3, align 8
  %7 = getelementptr inbounds %struct.hinic_hwdev, %struct.hinic_hwdev* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @HINIC_PF_MGMT_INIT, align 4
  %10 = call i32 @hinic_set_pf_action(i32 %8, i32 %9)
  %11 = load %struct.hinic_pfhwdev*, %struct.hinic_pfhwdev** %2, align 8
  %12 = getelementptr inbounds %struct.hinic_pfhwdev, %struct.hinic_pfhwdev* %11, i32 0, i32 0
  %13 = load i32, i32* @HINIC_MOD_L2NIC, align 4
  %14 = call i32 @hinic_unregister_mgmt_msg_cb(i32* %12, i32 %13)
  %15 = load %struct.hinic_pfhwdev*, %struct.hinic_pfhwdev** %2, align 8
  %16 = getelementptr inbounds %struct.hinic_pfhwdev, %struct.hinic_pfhwdev* %15, i32 0, i32 0
  %17 = call i32 @hinic_pf_to_mgmt_free(i32* %16)
  ret void
}

declare dso_local i32 @hinic_set_pf_action(i32, i32) #1

declare dso_local i32 @hinic_unregister_mgmt_msg_cb(i32*, i32) #1

declare dso_local i32 @hinic_pf_to_mgmt_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
